force-app/main/default/objects/Client_Credit_Report__c/Client_Credit_Report__c.object-meta.xml
<CustomObject>
    <label>Client Credit Report</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Client Credit Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Credit Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>