force-app/main/default/objects/Client_Credit_Report__c/fields/Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Date__c</fullName>
    <label>Credit Date</label>
    <length>32</length>
    <type>Text</type>
</CustomField>