force-app/main/default/objects/Client_Credit_Report__c/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <label>Report ID</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>